# sparrow_DEPRECATED

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  default.env  test
.github/workflows/: build_releases.yaml  ci.yaml  ci.yml  releases.yaml  tests.yaml
cli/: Cargo.toml
dockerfiles/: builder.Dockerfile  module.Dockerfile
sparrow/: Cargo.toml  README.md
sparrow-cli/: Cargo.toml  README.md
sparrow-cli/src/: lib.rs  main.rs
sparrow-cli/src/commands/: command.rs  get_command.rs  insert_command.rs  mod.rs  pop_command.rs
sparrow-resp/: Cargo.toml  README.md
sparrow-resp/src/: constants.rs  data.rs  deserialize.rs  lib.rs  serialize.rs
sparrow/src/: config.rs  egg.rs  errors.rs  lib.rs  logger.rs  main.rs  net.rs  sparrow.rs  tcp_server.rs
sparrow/src/cli/: cli.rs  config.rs  constants.rs  mod.rs  parameters.rs
sparrow/src/commands/: command.rs  get_command.rs  insert_command.rs  mod.rs  pop_command.rs
sparrow/src/core/: egg.rs  engine.rs  engine_input.rs  engine_output.rs  errors.rs  message.rs  mod.rs  nest.rs  output.rs  sparrow_engine.rs
sparrow/src/core/commands/: command.rs  engine_command.rs  get_command.rs  insert_command.rs  mod.rs  pop_command.rs  rem_command.rs  set_command.rs
sparrow/src/core/errors/: egg_not_in_nest_error.rs  mod.rs  poisoned_queue_error.rs  sparrow_error.rs
sparrow/src/errors/: command_not_found_error.rs  command_not_parsable_error.rs  mod.rs  poisoned_queue_error.rs  sparrow_error.rs
sparrow/src/net/: errors.rs  mod.rs  tcp_server.rs
sparrow/src/network/: mod.rs  sparrow_network_interface.rs  tcp_server.rs
sparrow/src/utils/: errors.rs  mio.rs  mod.rs
sparrow/tests/: sparrow_engine_tests.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: egg.rs  mod.rs  (+3 more)
(+6 files in other folders)
