[package]
authors = ["donacrio <donatien.criaud@gmail.com>"]
description = "CLI for Sparrow in-memory database"
edition = "2018"
license = "Apache-2.0"
name = "sparrow-cli"
repository = "https://github.com/DonaCrio/sparrow"
version = "0.1.0"

[dependencies]
sparrow = {path = '../sparrow'}

[dev-dependencies]
rstest = "0.6"
