[package]
authors = ["donacrio <donatien.criaud@gmail.com>"]
description = "A lightweight in-memory database"
edition = "2018"
license = "Apache-2.0"
name = "sparrow"
repository = "https://github.com/DonaCrio/sparrow"
version = "0.1.0"

[dependencies]
chrono = "0.4"
env_logger = "0.8"
log = "0.4"
mio = { version="0.7", features=["net", "os-poll"] }

[dev-dependencies]
rstest = "0.6"
