[package]
authors = ["donacrio <donatien.criaud@gmail.com>"]
description = "A lightweight in-memory database"
edition = "2018"
license = "Apache-2.0"
name = "sparrow"
repository = "https://github.com/DonaCrio/sparrow"
version = "0.1.0"

[dependencies]
bus = "2.2"
chrono = "0.4"
env_logger = "0.8"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
tokio = { version = "1.4", features = ["full"] }

[dev-dependencies]
rstest = "0.7"
