[package]
authors = ["donacrio <donatien.criaud@gmail.com>"]
description = "A lightweight in-memory database"
edition = "2018"
license = "Apache-2.0"
name = "sparrow"
repository = "https://github.com/DonaCrio/sparrow"
version = "0.1.0"

[dependencies]
async-std = "1.9"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
getopts = "0.2"
log = "0.4"
sparrow-resp = { path= "../sparrow-resp" }

[dev-dependencies]
rstest = "0.8"
